[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/cima.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Heal.png" type="Texture" id=2]
[ext_resource path="res://Scenes/HowToPlay.gd" type="Script" id=3]
[ext_resource path="res://Sprites/direita.png" type="Texture" id=4]
[ext_resource path="res://Sprites/esquerda.png" type="Texture" id=5]
[ext_resource path="res://Sprites/baixo.png" type="Texture" id=6]
[ext_resource path="res://Sounds/SFX/hover.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/SFX/click.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Tutorial"
length = 4.7
tracks/0/type = "value"
tracks/0/path = NodePath("Heal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Heal:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6.581, 57 ), Vector2( 61, 57 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("esquerda:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.0627451, 0.0627451, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Heal2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Heal2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.2, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 174.257, 57 ), Vector2( 91, 57 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("direita:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.1, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Heal4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 2.4, 3.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 76, 96.482 ), Vector2( 76, 69 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Heal4:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 2.4, 3.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("baixo:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 3.3, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Heal3:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 3.6, 4.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 76, -9.862 ), Vector2( 76, 45 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Heal3:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 3.6, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("cima:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 4.4, 4.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HowToPlay" type="Node"]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 21.7912
margin_top = 4.64883
margin_right = 979.791
margin_bottom = 43.6488
rect_scale = Vector2( 0.115, 0.115 )
text = "Use your arrow keys to play.
Press the button when the heart comes to the right place"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="LinkButton" parent="."]
margin_left = 71.8603
margin_top = 83.0412
margin_right = 144.86
margin_bottom = 115.041
rect_scale = Vector2( 0.115, 0.115 )
text = "BACK"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="LinkButton" parent="."]
margin_left = 65.8317
margin_top = 79.2851
margin_right = 240.832
margin_bottom = 97.2851
rect_scale = Vector2( 0.115, 0.115 )
text = "START GAME"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heal2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.466667 )
position = Vector2( 61, 57 )
scale = Vector2( 0.019355, 0.019355 )
texture = ExtResource( 2 )

[node name="Heal3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.466667 )
position = Vector2( 91.317, 57 )
scale = Vector2( 0.019355, 0.019355 )
texture = ExtResource( 2 )

[node name="Heal5" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.466667 )
position = Vector2( 76, 69 )
scale = Vector2( 0.019355, 0.019355 )
texture = ExtResource( 2 )

[node name="Heal4" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.466667 )
position = Vector2( 76, 45 )
scale = Vector2( 0.019355, 0.019355 )
texture = ExtResource( 2 )

[node name="TutorialAnimation" type="Node2D" parent="."]

[node name="cima" type="Sprite" parent="TutorialAnimation"]
position = Vector2( 75.4594, 19.8278 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 1 )

[node name="direita" type="Sprite" parent="TutorialAnimation"]
position = Vector2( 80.7955, 25.6163 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 4 )

[node name="esquerda" type="Sprite" parent="TutorialAnimation"]
position = Vector2( 70.246, 25.7282 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 5 )

[node name="baixo" type="Sprite" parent="TutorialAnimation"]
position = Vector2( 75.4594, 25.6507 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 6 )

[node name="Heal" type="Sprite" parent="TutorialAnimation"]
visible = false
position = Vector2( 61, 57 )
scale = Vector2( 0.019355, 0.019355 )
texture = ExtResource( 2 )

[node name="Heal2" type="Sprite" parent="TutorialAnimation"]
visible = false
position = Vector2( 91, 57 )
scale = Vector2( 0.019355, 0.019355 )
texture = ExtResource( 2 )

[node name="Heal3" type="Sprite" parent="TutorialAnimation"]
visible = false
position = Vector2( 76, 45 )
scale = Vector2( 0.019355, 0.019355 )
texture = ExtResource( 2 )

[node name="Heal4" type="Sprite" parent="TutorialAnimation"]
visible = false
position = Vector2( 76, 69 )
scale = Vector2( 0.019355, 0.019355 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TutorialAnimation"]
autoplay = "Tutorial"
anims/Tutorial = SubResource( 1 )

[node name="ClickAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="Hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
[connection signal="mouse_entered" from="BackButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="StartButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="animation_finished" from="TutorialAnimation/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
